Add react-is dependency required by recharts

--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "react-day-picker": "latest",
     "react-dom": "^19",
     "react-hook-form": "latest",
+    "react-is": "^19.2.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "latest",
     "sonner": "^1.7.1",
